# fsds-llm

./: .gitignore  Dockerfile  FAQ_DOCKER.md  LICENSE  README.md  combined_entrypoint.sh  docker-compose.yml  entrypoint.sh  main.py  orders_entrypoint.sh  pyproject.toml  requirements.txt  test.py
doc/: .$FlowChart.drawio.bkp  FlowChart.drawio
src/core/: bedrock_client.py  embedding.py  evaluation.py  openai_client.py  pgvector.py  tools.py
src/lang/: prompt_vi.py  vi.py
src/utils/database/: create_orders.sql  orders_insert.py
src/utils/faq/: add_document_to_pgvector.py  enrich_faq.py  faq.json  faq_enriched.json  faq_evaluation.json
src/vectordb/: docker-compose.yml  init.sql
ui/: bot_ui.py
