[project]
name = "ai-agents-cs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "boto3>=1.35.92",
    "langchain>=0.3.14",
    "langchain-aws>=0.2.10",
    "langchain-core>=0.3.29",
    "langdetect>=1.0.9",
    "langgraph>=0.2.60",
    "psycopg>=3.2.3",
    "pydantic[email]>=2.10.4",
    "ragas>=0.2.9",
    "streamlit>=1.41.1",
]
